# fulcrum

./: .gitignore  .gitmodules  Cargo.toml  README.md
contract/: foundry.toml
contract/src/: Buffer.sol  External.sol  Math.sol  SwapMath.sol  TradeExecutor.sol  V3PoolViewer.sol
contract/test/: SwapMath.t.sol.bak  TradeExecutor.t.sol  V3PoolViewer.t.sol
crates/: cli.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: constant.rs  engine.rs  lib.rs  logger.rs  order.rs  price.rs  price_graph.rs  trade_router.rs  trade_simulator.rs  types.rs  uniswap_v2.rs  uniswap_v3.rs  util.rs  zero_ex.rs
crates/sequencer-feed/: Cargo.toml  README.md
crates/sequencer-feed/res/: batch.json  contract-create.json  huuge.json  slow-200.json  slow-200b.json  small.json  test.base64  unhandled-tx.blob
crates/sequencer-feed/src/: deser.rs  lib.rs  types.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: backend.rs  cli.rs  lib.rs  manager.rs  types.rs
