[package]
name = "fulcrum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fulcrum"
path = "crates/main.rs"

[dependencies]
argh = "0.1.10"
core_affinity = "0.8.0"
env_logger = "0.10.0"
ethers-middleware = "2.0.3"
ethers-providers = "2.0.3"
ethers-signers = "2.0.3"
faster-hex = "0.6.1"
mimalloc = { version = "0.1.37",  default-features = false }
tokio = { version = "1.27.0", features = [ "full" ] }

fulcrum-engine = { path = "crates/engine" }
fulcrum-sequencer-feed = { path = "crates/sequencer-feed" }
fulcrum-ws-cli = { path = "crates/ws-cli" }

[workspace]
members = ["crates/engine", "crates/ws-cli", "crates/sequencer-feed"]

[profile.release]
codegen-units = 1
panic = "unwind"
lto = true

[profile.profiling]
inherits = "release"
debug = 1
