[package]
name = "fulcrum-engine"
version = "0.1.0"
edition = "2021"
authors = ["jordy25519"]

[dependencies]
bumpalo = "3.12.2"
core_affinity = "0.8.0"
ethabi-static = { git = "https://github.com/jordy25519/ethabi-static" }
ethers = "2.0.4"
ethers-providers = "2.0.3"
ethers-signers = "2.0.3"
futures = "0.3.28"
hex-literal = "0.4.1"
lockfree = "0.5.1"
log = { version = "*", features = ["max_level_info"] }
once_cell = "1.17.1"
serde = "*"
serde_json = { version = "1.0.96", features = ["raw_value"] }
thingbuf = "0.1.4"
tokio = { version = "1.27.0", features = ["full"] }
variant_count = "1.1.0"

fulcrum-sequencer-feed = { path = "../sequencer-feed" }
fulcrum-ws-cli = { path = "../ws-cli" }

[dev-dependencies]
hex = "*"

[features]
bench = []
